collapsed nav fixed!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -811,7 +811,6 @@ p {
         background-color: #fff;
         padding: 5px 15px;
         z-index: 9;
-        font-size: 6px !important !important;
         /*
         -webkit-box-shadow: 10px 5px 25px 0px rgba(48, 47, 65, 0.3);
         -moz-box-shadow: 10px 5px 25px 0px rgba(48, 47, 65, 0.3);
@@ -824,6 +823,7 @@ p {
         position: absolute;
         top: 128%;
         width: 100%;
+        height: 150px !important;
         left: 0;
         background-color: #fff;
         padding: 5px 15px;
@@ -832,6 +832,21 @@ p {
         -webkit-box-shadow: 10px 5px 25px 0px rgba(48, 47, 65, 0.3);
         -moz-box-shadow: 10px 5px 25px 0px rgba(48, 47, 65, 0.3);
         box-shadow: 0px 10px 5px 0px rgba(48, 47, 65, 0.2) */;
+    }
+}
+
+@media (max-width: 767px) {
+    .navbar-collapse .navbar-nav .nav-item {
+        display: block !important;
+        position: relative !important;
+        right: -5%;
+    }
+}
+
+@media (max-width: 767px) {
+    .navbar-collapse .navbar-nav .purchase-nav {
+        padding-bottom: 25px;
+        right: -60%;
     }
 }
 
@@ -848,12 +863,14 @@ p {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .navbar .navbar-nav .nav-item {
         margin: 5px 0;
+        
     }
 }
 
 @media (max-width: 767px) {
     .navbar .navbar-nav .nav-item {
         margin: 5px 0;
+       
     }
 }
 
